keycloak-manifests/overlays/dev/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  template:
    spec:
      containers:
      - name: keycloak
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/keycloak-tls
          readOnly: true
      volumes:
      - name: tls-certs
        secret:
          secretName: keycloak-tls
