keycloak-manifests/overlays/dev/service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8443
    targetPort: 8443
    protocol: TCP
    name: https
