keycloak-manifests/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod  # Disabled: using manually copied cert due to rate limit
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "20"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ykt-piserver.zapto.org
    secretName: noip-tls-secret
  rules:
  - host: ykt-piserver.zapto.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8081
